--- a/.github/workflows/update_epg.yml
+++ b/.github/workflows/update_epg.yml
@@ -2,8 +2,8 @@ name: Update EPG
 
 on:
   schedule:
-    # 每天北京时间早上 4:15 运行 (UTC 20:15)
-    - cron: '15 20 * * *'
+    # 每天美东时间早上 04:15 运行 (UTC 09:15)
+    - cron: '15 09 * * *'
   workflow_dispatch: # 允许手动点击按钮触发
 
 jobs:
